--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
         </ul>
     </nav>
     <section id="main">
-        <h1>Lorem Ipsum</h1>
-        <p>
-            Aenean a efficitur nisl. Quisque metus enim, ultrices vitae pharetra sit amet, lacinia vitae augue. Proin consectetur dolor ipsum, quis elementum felis blandit eu. Aliquam arcu felis, ullamcorper sed nunc nec, tincidunt pellentesque lacus. Aliquam leo nulla, tincidunt sed dictum sit amet, fermentum ut elit. Ut quis suscipit ipsum. Nulla sed felis eu ante faucibus dignissim non quis mauris. Donec vitae lorem a quam dignissim rhoncus malesuada at justo. In consectetur ligula lacus, et ultrices nisl cursus sed. Quisque sodales sapien ipsum, nec sollicitudin est varius a. Proin est eros, viverra nec orci id, tincidunt venenatis odio. Proin bibendum mollis accumsan. Integer lacus diam, pretium vel nisi ac, eleifend tristique libero. Praesent nec tincidunt erat, quis sodales tortor. Donec lacinia leo ac dolor posuere, a pretium orci tempus. Ut pretium lectus elit, a porttitor neque maximus a. 
-        </p>
+        <h1>Florian Verdier</h1>
+        <h3>Un homme qui mérite d'être pépon</h3>
     </section>
     <section>
         <h1>Lorem Ipsum</h1>
