load images before show anything

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Florian Verdier</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="loading">
     <nav>
         <ul class="sidebar">
             <li onclick="hideSideBar()"><a href="#"><img src="resources/icons/icon-close.svg" alt="Close"></a></li>
