changing navbar content

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <nav>
         <ul class="sidebar">
             <li onclick="hideSideBar()"><a href="#"><img src="resources/icons/icon-close.svg" alt="Close"></a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Produits</a></li>
-            <li><a href="#">A propos</a></li>
+            <li><a href="#">Projets</a></li>
+            <li><a href="#">Conférences</a></li>
+            <li><a href="#">Contacts</a></li>
         </ul>
         <ul id="top-nav">
-            <li class="hideOnMobile"><a href="#">Blog</a></li>
-            <li class="hideOnMobile"><a href="#">Produits</a></li>
-            <li class="hideOnMobile"><a href="#">A propos</a></li>
+            <li class="hideOnMobile"><a href="#">Projets</a></li>
+            <li class="hideOnMobile"><a href="#">Conférences</a></li>
+            <li class="hideOnMobile"><a href="#">Contacts</a></li>
             <li id="menu-icon" class="mobile-icon" onclick="showSideBar()"><a href="#"><img src="resources/icons/icon-menu.svg" alt="Menu"></a></li>
         </ul>
     </nav>
