--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Florian Verdier</h1>
             <h3>"Un homme qui mérite d'être pépon"</h3>
             <br>
-            <img style="height: 400px;" src="resources/images/florian.svg" alt="floflo">
+            <img src="resources/images/florian.svg" alt="floflo">
         </div>
 
         <div class="section-big fade-in-right">
