--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
             <li onclick="hideSideBar()"><a href="#"><img src="resources/icons/icon-close.svg" alt="Close"></a></li>
             <li><a href="#">Projets</a></li>
             <li><a href="#">Conférences</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="#contact">Contacts</a></li>
         </ul>
         <ul id="top-nav">
             <li class="hideOnMobile"><a href="#">Projets</a></li>
             <li class="hideOnMobile"><a href="#">Conférences</a></li>
-            <li class="hideOnMobile"><a href="#">Contacts</a></li>
+            <li class="hideOnMobile"><a href="#contact">Contacts</a></li>
             <li id="menu-icon" class="mobile-icon" onclick="showSideBar()"><a href="#"><img src="resources/icons/icon-menu.svg" alt="Menu"></a></li>
         </ul>
     </nav>
     <section id="main">
         <div class="section-header">
             <h1>Florian Verdier</h1>
-            <h3>"Un homme qui mérite d'être pépon"</h3>
+            <h3>Conférencier - Journaliste - Ornithologue </h3>
         </div>
         <div class="section-content">
             <div class="section-small fade-in-left">
@@ -33,10 +33,10 @@
             </div>
 
             <div class="section-big fade-in-right">
-                <h2>Lorem Ipsum</h2>
-                <div>
+                <h2>Trouver un lien entre la nature et le jeu vidéo</h2>
+                <p>
                     Aenean a efficitur nisl. Quisque metus enim, ultrices vitae pharetra sit amet, lacinia vitae augue. Proin consectetur dolor ipsum, quis elementum felis blandit eu. Aliquam arcu felis, ullamcorper sed nunc nec, tincidunt pellentesque lacus. Aliquam leo nulla, tincidunt sed dictum sit amet, fermentum ut elit. Ut quis suscipit ipsum. Nulla sed felis eu ante faucibus dignissim non quis mauris. Donec vitae lorem a quam dignissim rhoncus malesuada at justo. In consectetur ligula lacus, et ultrices nisl cursus sed. Quisque sodales sapien ipsum, nec sollicitudin est varius a. Proin est eros, viverra nec orci id, tincidunt venenatis odio. Proin bibendum mollis accumsan. Integer lacus diam, pretium vel nisi ac, eleifend tristique libero. Praesent nec tincidunt erat, quis sodales tortor. Donec lacinia leo ac dolor posuere, a pretium orci tempus. Ut pretium lectus elit, a porttitor neque maximus a.     
-                </div>
+                </p>
             </div>
         </div>
         
@@ -49,8 +49,8 @@
             Aenean a efficitur nisl. Quisque metus enim, ultrices vitae pharetra sit amet, lacinia vitae augue. Proin consectetur dolor ipsum, quis elementum felis blandit eu. Aliquam arcu felis, ullamcorper sed nunc nec, tincidunt pellentesque lacus. Aliquam leo nulla, tincidunt sed dictum sit amet, fermentum ut elit. Ut quis suscipit ipsum. Nulla sed felis eu ante faucibus dignissim non quis mauris. Donec vitae lorem a quam dignissim rhoncus malesuada at justo. In consectetur ligula lacus, et ultrices nisl cursus sed. Quisque sodales sapien ipsum, nec sollicitudin est varius a. Proin est eros, viverra nec orci id, tincidunt venenatis odio. Proin bibendum mollis accumsan. Integer lacus diam, pretium vel nisi ac, eleifend tristique libero. Praesent nec tincidunt erat, quis sodales tortor. Donec lacinia leo ac dolor posuere, a pretium orci tempus. Ut pretium lectus elit, a porttitor neque maximus a. 
         </p>
     </section>
-    <section>
-        <h1>Lorem Ipsum</h1>
+    <section id="contact">
+        <h1>Me contacter</h1>
         <p>
             Aenean a efficitur nisl. Quisque metus enim, ultrices vitae pharetra sit amet, lacinia vitae augue. Proin consectetur dolor ipsum, quis elementum felis blandit eu. Aliquam arcu felis, ullamcorper sed nunc nec, tincidunt pellentesque lacus. Aliquam leo nulla, tincidunt sed dictum sit amet, fermentum ut elit. Ut quis suscipit ipsum. Nulla sed felis eu ante faucibus dignissim non quis mauris. Donec vitae lorem a quam dignissim rhoncus malesuada at justo. In consectetur ligula lacus, et ultrices nisl cursus sed. Quisque sodales sapien ipsum, nec sollicitudin est varius a. Proin est eros, viverra nec orci id, tincidunt venenatis odio. Proin bibendum mollis accumsan. Integer lacus diam, pretium vel nisi ac, eleifend tristique libero. Praesent nec tincidunt erat, quis sodales tortor. Donec lacinia leo ac dolor posuere, a pretium orci tempus. Ut pretium lectus elit, a porttitor neque maximus a. 
         </p>
