--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="loading">
-    <nav>
-        <ul class="sidebar">
-            <li onclick="hideSideBar()"><a href="#"><img src="resources/icons/icon-close.svg" alt="Close"></a></li>
+    <button id="open-sidebar-button" onclick="showSideBar()">
+        <img src="resources/icons/icon-menu.svg" alt="Menu">
+    </button>
+    <nav id="navbar">
+        <ul id="top-nav">
+            <li onclick="hideSideBar()" id="close-sidebar-button"><a><img src="resources/icons/icon-close.svg" alt="close-icon"></a></li>
             <li><a href="#">Projets</a></li>
             <li><a href="#">Conférences</a></li>
             <li><a href="#contact">Contacts</a></li>
         </ul>
-        <ul id="top-nav">
-            <li class="hideOnMobile"><a href="#">Projets</a></li>
-            <li class="hideOnMobile"><a href="#">Conférences</a></li>
-            <li class="hideOnMobile"><a href="#contact">Contacts</a></li>
-            <li id="menu-icon" class="mobile-icon" onclick="showSideBar()"><a href="#"><img src="resources/icons/icon-menu.svg" alt="Menu"></a></li>
-        </ul>
     </nav>
+
+    <div id="overlay" onclick="hideSideBar()"></div>
+    
     <section id="main">
         <div class="section-header">
             <h1>Florian Verdier</h1>
@@ -33,7 +33,7 @@
             </div>
 
             <div class="section-big fade-in-right">
-                <h2>Trouver un lien entre la nature et le jeu vidéo</h2>
+                <h2>Faire le lien entre la nature et le jeu vidéo</h2>
                 <p>
                     Aenean a efficitur nisl. Quisque metus enim, ultrices vitae pharetra sit amet, lacinia vitae augue. Proin consectetur dolor ipsum, quis elementum felis blandit eu. Aliquam arcu felis, ullamcorper sed nunc nec, tincidunt pellentesque lacus. Aliquam leo nulla, tincidunt sed dictum sit amet, fermentum ut elit. Ut quis suscipit ipsum. Nulla sed felis eu ante faucibus dignissim non quis mauris. Donec vitae lorem a quam dignissim rhoncus malesuada at justo. In consectetur ligula lacus, et ultrices nisl cursus sed. Quisque sodales sapien ipsum, nec sollicitudin est varius a. Proin est eros, viverra nec orci id, tincidunt venenatis odio. Proin bibendum mollis accumsan. Integer lacus diam, pretium vel nisi ac, eleifend tristique libero. Praesent nec tincidunt erat, quis sodales tortor. Donec lacinia leo ac dolor posuere, a pretium orci tempus. Ut pretium lectus elit, a porttitor neque maximus a.     
                 </p>
@@ -56,6 +56,6 @@
         </p>
     </section>
 
-    <script src="script.js"></script>
+    <script src="script.js" refer></script>
 </body>
 </html>
