added some carousel

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="navbar">
         <ul id="top-nav">
             <li onclick="hideSideBar()" id="close-sidebar-button"><a><img src="resources/icons/icon-close.svg" alt="close-icon"></a></li>
-            <li><a href="#">Projets</a></li>
+            <li><a href="#projects">Projets</a></li>
             <li><a href="#">Conférences</a></li>
             <li><a href="#contact">Contacts</a></li>
         </ul>
@@ -32,10 +32,10 @@
                 <img src="resources/images/florian.svg" alt="floflo">
             </div>
 
-            <div class="section-big fade-in-right">
+            <div class="fade-in-right">
                 <h2>Faire le lien entre la nature et le jeu vidéo</h2>
                 <p>
-                    Aenean a efficitur nisl. Quisque metus enim, ultrices vitae pharetra sit amet, lacinia vitae augue. Proin consectetur dolor ipsum, quis elementum felis blandit eu. Aliquam arcu felis, ullamcorper sed nunc nec, tincidunt pellentesque lacus. Aliquam leo nulla, tincidunt sed dictum sit amet, fermentum ut elit. Ut quis suscipit ipsum. Nulla sed felis eu ante faucibus dignissim non quis mauris. Donec vitae lorem a quam dignissim rhoncus malesuada at justo. In consectetur ligula lacus, et ultrices nisl cursus sed. Quisque sodales sapien ipsum, nec sollicitudin est varius a. Proin est eros, viverra nec orci id, tincidunt venenatis odio. Proin bibendum mollis accumsan. Integer lacus diam, pretium vel nisi ac, eleifend tristique libero. Praesent nec tincidunt erat, quis sodales tortor. Donec lacinia leo ac dolor posuere, a pretium orci tempus. Ut pretium lectus elit, a porttitor neque maximus a.     
+                    Aenean a efficitur nisl. Quisque metus enim, ultrices vitae pharetra sit amet, lacinia vitae augue. Proin consectetur dolor ipsum, quis elementum felis blandit eu. Aliquam arcu felis, ullamcorper sed nunc nec, tincidunt pellentesque lacus.  
                 </p>
             </div>
         </div>
@@ -43,12 +43,34 @@
 
         
     </section>
-    <section>
-        <h1>Lorem Ipsum</h1>
-        <p>
-            Aenean a efficitur nisl. Quisque metus enim, ultrices vitae pharetra sit amet, lacinia vitae augue. Proin consectetur dolor ipsum, quis elementum felis blandit eu. Aliquam arcu felis, ullamcorper sed nunc nec, tincidunt pellentesque lacus. Aliquam leo nulla, tincidunt sed dictum sit amet, fermentum ut elit. Ut quis suscipit ipsum. Nulla sed felis eu ante faucibus dignissim non quis mauris. Donec vitae lorem a quam dignissim rhoncus malesuada at justo. In consectetur ligula lacus, et ultrices nisl cursus sed. Quisque sodales sapien ipsum, nec sollicitudin est varius a. Proin est eros, viverra nec orci id, tincidunt venenatis odio. Proin bibendum mollis accumsan. Integer lacus diam, pretium vel nisi ac, eleifend tristique libero. Praesent nec tincidunt erat, quis sodales tortor. Donec lacinia leo ac dolor posuere, a pretium orci tempus. Ut pretium lectus elit, a porttitor neque maximus a. 
-        </p>
+
+    <section id="projects">
+        <div class="section-header"><h1>Projets</h1></div>
+        <div class="section-content carousel">
+            <div class="carousel-card">
+                <img src="resources/images/carousel/PSI.png" alt="PSI">
+            </div>
+            <div class="carousel-card" style="background-color: red;">
+                <img src="resources/images/carousel/youtube.png" alt="PSI">
+            </div>
+            <div class="carousel-card">
+
+            </div>
+            <div class="carousel-card">
+
+            </div>
+            <div class="carousel-card">
+
+            </div>
+            <div class="carousel-card">
+
+            </div>
+            <div class="carousel-card">
+
+            </div>
+        </div>
     </section>
+
     <section id="contact">
         <h1>Me contacter</h1>
         <p>
