--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
     <section id="projects">
         <div class="section-header"><h1>Projets</h1></div>
         <div class="section-content carousel">
-            <div class="carousel-card">
+            <a href="https://playstationinside.fr/author/necheku" class="carousel-card">
                 <img src="resources/images/carousel/PSI.png" alt="PSI">
-            </div>
-            <div class="carousel-card" style="background-color: red;">
+            </a>
+            <a class="carousel-card" style="background-color: red;">
                 <img src="resources/images/carousel/youtube.png" alt="PSI">
-            </div>
-            <div class="carousel-card">
+            </a>
+            <a class="carousel-card">
 
-            </div>
-            <div class="carousel-card">
+            </a>
+            <a class="carousel-card">
 
-            </div>
-            <div class="carousel-card">
+            </a>
+            <a class="carousel-card">
 
-            </div>
-            <div class="carousel-card">
+            </a>
+            <a class="carousel-card">
 
-            </div>
-            <div class="carousel-card">
+            </a>
+            <a class="carousel-card">
 
-            </div>
+            </a>
         </div>
     </section>
 
